Allow providing securityContext capabilities to the hass container for bluetooth dongles

--- a/stable/home-assistant/templates/deployment.yaml
+++ b/stable/home-assistant/templates/deployment.yaml
@@ -152,6 +152,12 @@ spec:
             fsGroup: {{ .Values.fsGroup }}
           {{- end }}
           {{- end }}
+          {{- if .Values.capabilities }}
+            capabilities:
+            {{- range .Values.capabilities }}
+              - {{ . }}
+            {{- end}}
+          {{- end }}
           {{- end }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
