--- a/stable/home-assistant/values.yaml
+++ b/stable/home-assistant/values.yaml
@@ -108,12 +108,16 @@ extraEnvSecrets:
 extraSecretForEnvFrom: []
 # - home-assistant-secrets
 
-# Enable pod security context (must be `true` if runAsUser or fsGroup are set)
+# Enable pod security context (must be `true` if runAsUser or fsGroup or capabilities are set)
 usePodSecurityContext: true
 # Set runAsUser to 1000 to let home-assistant run as non-root user 'hass' which exists in 'runningman84/alpine-homeassistant' docker image.
 # When setting runAsUser to a different value than 0 also set fsGroup to the same value:
 # runAsUser: <defaults to 0>
 # fsGroup: <will be omitted in deployment if runAsUser is 0>
+
+## Specify additional capabilities for the home-assistant container
+## This is useful if you need to set extra capabilities for USB Bluetooth devices but do not want to use hostNetwork
+capabilities: []
 
 git:
   enabled: false
